Translate buttons into multiple languages

--- a/overlay/lang/de.json
+++ b/overlay/lang/de.json
@@ -147,6 +147,14 @@
         {
             "key": "RandomUuid",
             "value": "Zufällige UUID"
+        },
+        {
+            "key": "Back",
+            "value": "Zurück"
+        },
+        {
+            "key": "OK",
+            "value": "OK"
         }
     ]
 }
