--- a/overlay/lang/es.json
+++ b/overlay/lang/es.json
@@ -147,6 +147,14 @@
         {
             "key": "RandomUuid",
             "value": "UUID aleatoria"
+        },
+        {
+            "key": "Back",
+            "value": "Volver"
+        },
+        {
+            "key": "OK",
+            "value": "OK"
         }
     ]
 }
