--- a/overlay/lang/pt-BR.json
+++ b/overlay/lang/pt-BR.json
@@ -147,6 +147,14 @@
         {
             "key": "RandomUuid",
             "value": "UUID aleatório"
+        },
+        {
+            "key": "Back",
+            "value": "Voltar"
+        },
+        {
+            "key": "OK",
+            "value": "OK"
         }
     ]
 }
