--- a/overlay/lang/it.json
+++ b/overlay/lang/it.json
@@ -147,6 +147,14 @@
         {
             "key": "RandomUuid",
             "value": "Random UUID"
+        },
+        {
+            "key": "Back",
+            "value": "Indietro"
+        },
+        {
+            "key": "OK",
+            "value": "OK"
         }
     ]
 }
